fix some mobile bugs that cropped up somehow

--- a/src/components/Clicker.css
+++ b/src/components/Clicker.css
@@ -44,6 +44,12 @@
     animation-iteration-count: 1;
 }
 
+@media (any-hover: none) {
+    #Clicker:hover, #Clicker:active {
+        animation-name: none;
+    }
+}
+
 #Clicker .button {
     position: absolute;
     width: 80px;
